# music-you

./: .env  .env.devclient  .env.development  .env.electron  .env.prodclient  .env.production  .eslintrc  .eslintrc.js  .gitignore  .prettierrc.js  LICENSE  README.md  babel.config.js  electron-builder.json5  index.html  jsconfig.json  newyear.js  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  postcss.config.ts  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vercel.json  vite.config.js  vite.config.ts  vue.config.js
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  ci.yml  release.yml
.husky/: pre-commit
e2e/: example.spec.ts
electron/: apimap.js  apiserver.js  ipcMain.js  ipcRenderer.js  menu.js  netEaseService.js  otherapi.js  routes.js  server.js.bak
electron/main/: env.d.ts  index.ts  update.ts
electron/preload/: index.ts
public/: edit_flac_metadata.py  flac.py  index.html  splashscreen.html
public/icons/: icon.icns
rollplugins/: renderer.js
scripts/: build-server.mjs  build.mjs  watch.mjs
shared/: types.ts
src/: App.scss  App.tsx  App.vue  Minimal.tsx  auto-imports.d.ts  background.js  components.d.ts  main.js  main.ts  main.tsx  router.tsx  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs
src-tauri/src/core/: handle.rs  mod.rs  tray.rs
src-tauri/src/utils/: help.rs  mod.rs  resolve.rs
src/api/: account.ts  album.ts  artist.ts  cloud.js  cloud.ts  index.js  index.ts  local.ts  music.js  music.ts  mv.ts  (+11 more)
(+724 files in other folders)
